<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_consultas_abiertas">

    <fragment
        android:id="@+id/nav_consultas_abiertas"
        android:name="com.ehome.enpartesapp.ui.consultasabiertas.ConsultasabiertasFragment"
        android:label="@string/menu_consultas_abiertas"
        tools:layout="@layout/fragment_consultasabiertas" >
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_solicitudes_abiertas"
        android:name="com.ehome.enpartesapp.ui.solicitudesabiertas.SolicitudesabiertasFragment"
        android:label="@string/menu_solicitudes_abiertas"
        tools:layout="@layout/fragment_solicitudesabiertas" >
        <argument
            android:name="username"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_piezas_abiertas"
        android:name="com.ehome.enpartesapp.ui.piezasabiertas.PiezasabiertasFragment"
        android:label="@string/menu_piezas_abiertas"
        tools:layout="@layout/fragment_piezasabiertas" />

    <fragment
        android:id="@+id/nav_piezas_por_entregar"
        android:name="com.ehome.enpartesapp.ui.piezasporentregar.PiezasporentregarFragment"
        android:label="@string/menu_piezas_por_entregar"
        tools:layout="@layout/fragment_piezasporentregar" />
</navigation>