<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dondestamos"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="LoginActivity">

    <ImageView
        android:id="@+id/logo_enpartes"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="554dp"
        android:contentDescription="@string/descripcion_logo_enpartes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/logo_enpartes" />

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="350dp"
        android:layout_height="172dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="358dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:linksClickable="false"
            android:maxLength="30"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:textColor="@color/colorNegro"
            android:textColorLink="@color/colorNegro" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:ignore="Suspicious0dp" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        style="@style/CustomButtonStyle"
        android:layout_marginStart="58dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="12dp"
        android:enabled="true"
        android:text="@string/action_sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLogin" />

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="457dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="228dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/no_tiene_cuenta"
            android:textColor="@color/colorNegro"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="85dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mostrarenverde"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/enverdesm"
            android:gravity="end|center"
            android:text="@string/valor_en_verde"
            android:textColor="@color/colorNegro"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="137dp"
        android:layout_height="108dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="105dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>